Fiks mapping av både fysiske arbeidssteder og arbeidsland